修复：多表join情况表取值bug